2016-02-12 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-436
	
	* src/m_disort.cc (DisortCalc),
	src/disort.cc, src/disort.h (dtauc_ssalbCalc, phase_functionCalc):
	Changed to work with a flexible cloudbox. DISORT calculation itself is done
	over the whole atmosphere, but output is only provided (and further used by
	ARTS) from within the cloudbox. That improves sphericity issues for
	slant-looking cases (it's a little slower, though - ARTS clearsky is slower
	than DISORT clearsky).
	
	* controlfiles/artscomponents/disort/TestDISORT.arts:
	Set to apply cloudboxSetAutomatically (differences to DOIT solution do indeed
	improve a little more. no-cloud diffs no below 0.1K).
	
	* src/m_cloudbox.cc, src/methods.cc (pnd_fieldZero):
	Bugfix. Do not create pnd_field covering whole atmo, but only the cloudbox.
	
2016-02-11 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-435
	
	Added handling of non-isotropic incoming radiation at TOA in DISORT.
	Work in progress: ARTS interface and DISORT code done. Data preparation within
	ARTS pending (regards calculation of angular grid, which needs to	correspond
	to DISORT's internal double-Gauss grid for the specified nstreams, and the
	incoming clearky rad at these angles (maybe we can use DoitGetIncoming for the
	latter?) as well as adaptation of DisortCalc to	flexible cloudbox sizes).
	
	* 3rdparty/disort1.2/DISORT.f:
	Added option of non-isotropic incoming radiation at TOA (code copied from
	modified DISORT version by Suzuki & Mendrok as used in and tested with
	SARTre).
	
	* src/m_disort.cc (DisortCalc), src/disort_DISORT.h:
	Modified Fortran DISORT call interface for above feature.
	
2016-02-11 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-434
	
	* src/m_atmosphere.cc, methods.cc (AtmFieldsFromCompact):
	Introduce keyword that allows to remove low-pressure atmospheric levels from
	the atm field data (effectively moving TOA to higher pressure).
	
	* controlfiles/artscomponents/doitbatch/TestDOITBatch.arts: